--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h1 {
     width: 40vh;
     margin: 40px;
     background-color: #221f65;
-    border-radius: 50% 20% / 10% 40%;
+    border-radius: 20px;
 }
 
 .join {
@@ -80,6 +80,32 @@ h1 {
         background-color: #221f65;
         margin-left: auto;
         margin-right: auto;
+        border-radius: 20px;
+}
+
+.sports {
+    height: 60vh;
+    width: 100vh;
+    margin: 40px;
+    background-color: #221f65;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+}
+
+.movies {
+    height: 60vh;
+    width: 100vh;
+    margin: 40px;
+    background-color: #221f65;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+}
+
+
+.info {
+    padding-top: 140px;
 }
 
 .card-text {
