--- a/style.css
+++ b/style.css
@@ -44,8 +44,24 @@ main {
     text-align: center;
 }
 
+section {
+    padding-top: 40px;
+}
+
 h1 { 
     padding-top: 40px;
+}
+
+
+#progressBar {
+    width: 20rem;
+    height: 1.5rem;
+    border: 0.2em solid rgb(11,223,36);
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .container {
@@ -103,6 +119,26 @@ h1 {
     border-radius: 20px;
 }
 
+.choice-container {
+    display: inline-flex;
+    margin-top: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    background-color: #276873;
+    height: 40px;
+    border-radius: 20px;
+}
+
+.choice-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(6, 103, 247, 0.5);
+    transform: scale(1.02);
+    transform: transform 100ms;
+}
+
+.choice-prefix {
+    margin-right: 20px;
+}
 
 .info {
     padding-top: 140px;
