--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
 }
 
 section {
-    padding-top: 40px;
+    padding-top: 50px;
 }
 
 h1 { 
@@ -140,8 +140,12 @@ h1 {
     margin-right: 20px;
 }
 
-.info {
-    padding-top: 140px;
+.correct {
+    background: green;
+}
+
+.incorrect {
+    background: red;
 }
 
 .card-text {
@@ -169,6 +173,7 @@ h1 {
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	background-color:#408c99;
 }
+
 .myButton:active {
 	position:relative;
 	top:1px;
@@ -179,6 +184,7 @@ footer {
     height: 100px;
     color: white;
     text-align: center;
+    padding-bottom: 40px;
 }
 
 .home-link {
@@ -192,3 +198,27 @@ footer {
 .footer {
     padding-top: 40px;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    
+  }
