--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h1 {
 
 .sports {
     height: 60vh;
-    width: 100vh;
+    width: 80%;
     margin: 40px;
     background-color: #221f65;
     margin-left: auto;
@@ -111,7 +111,7 @@ h1 {
 
 .movies {
     height: 60vh;
-    width: 100vh;
+    width: 80%;
     margin: 40px;
     background-color: #221f65;
     margin-left: auto;
