--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,8 +58,8 @@ footer {
     padding-top: 60px;
 }
 
-form {
-    text-align: center;
+button {
+    padding-top: 50px;
 }
 
 .first-page {
@@ -75,25 +75,54 @@ form {
     margin-left: auto;
     margin-right: auto;
     border-radius: 50px;
+    padding-top: 100px;
 }
 
 .info-text {
     text-align: center;
     color: white;
-    padding-top: 40px;
+    padding-top: 20px;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box-one {
     height: 35vh;
     width: 60%;
     margin-top: 40px;
-    margin-right: 40px;
+    margin-right: 20px;
     background-color: #221f65;
     border-radius: 50px;
+}
+
+.box-text {
+    text-align: center;
+    color: white;
+    padding-top: 120px;
+}
+
+.myButton {
+	box-shadow: 0px 10px 14px -7px #276873;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:28px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
+}
+
+.myButton:hover {
+    color: #2cd0e2;
 }
