--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ main {
     background-color: #0E101C;
 }
 
-h1 { 
+h1,h2 { 
     color: white;
     margin: auto;
     text-align: center;
@@ -59,7 +59,26 @@ footer {
 }
 
 button {
-    padding-top: 50px;
+    padding-top: 20px;
+}
+
+input {
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.about {
+    color: white;
+    padding-top: 200px;
+}
+
+.about-text { 
+    padding-top: 100px;
+    text-align: center; 
+    display: block;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .first-page {
@@ -74,6 +93,7 @@ button {
     background-color: #221f65;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     border-radius: 50px;
     padding-top: 100px;
 }
@@ -94,7 +114,7 @@ button {
 
 .box-one {
     height: 35vh;
-    width: 60%;
+    width: 70%;
     margin-top: 40px;
     margin-right: 20px;
     background-color: #221f65;
@@ -104,7 +124,7 @@ button {
 .box-text {
     text-align: center;
     color: white;
-    padding-top: 120px;
+    padding-top: 50px;
 }
 
 .myButton {
