--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,23 @@ input {
     margin-right: auto;
     margin-top: 100px;
     border-radius: 20px;
+    text-align: center;
+}
+
+.sports-text { 
+    color: white;
+    padding-top: 60px;
+}
+
+.progressbar { 
+    width: 20rem;
+    height: 1.5rem;
+    border: 0.2em solid #2cd0e2;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .about {
@@ -84,10 +101,16 @@ input {
 }
 
 .about-text { 
-    padding-top: 100px;
+    margin-top: 20px;
+    padding-top: 60px;
+    padding-right: 30px;
+    padding-left: 30px;
     text-align: center; 
     display: block;
-    width: 800px;
+    height: 20vh;
+    width: 50%;
+    background-color: #221f65;
+    border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -156,4 +179,23 @@ input {
 
 .myButton:hover {
     color: #2cd0e2;
+}
+
+.choice-container {
+    display: inline-flex;
+    padding: 20px;
+    background-color: #2cd0e2;
+    height: 40px;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-right: 30px;
+}
+
+.choice-text  {
+    padding-top: 10px;
+    cursor: pointer;
+}
+
+.choice-text:hover {
+    color: greenyellow;
 }
