--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,26 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #0E101C;
 }
 
 nav {
-    display: flex;
-    justify-content: center;
     width: 100%;
-    height: 6vh;
-    padding-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
     background-color: #221f65;
+    margin-bottom: 15px;
+}
+
+ul {
+    display: inline-flex;
+    justify-content: space-evenly;
+    width: 100%;
+    vertical-align: middle;
 }
 
 li {
     list-style-type: none;
-    margin-right: 100px;
-    margin-left: 100px;
+    line-height: 5.5;
+    vertical-align: middle;
 }
 
 a { 
@@ -33,21 +36,14 @@ a:hover {
     color: #2cd0e2;
 }
 
-ul {
-    display: flex;
-    width: 4400px;
-}
 
 main { 
     height: 95vh;
-    background-color: #0E101C;
 }
 
 h1,h2 { 
     color: white;
-    margin: auto;
     text-align: center;
-    padding-top: 50px;
 }
 
 footer { 
@@ -69,7 +65,7 @@ input {
 }
 
 .sports {
-    height: 60vh;
+    height: 50vh;
     width: 50%;
     background-color: #221f65;
     margin-left: auto;
@@ -81,7 +77,7 @@ input {
 
 .sports-text { 
     color: white;
-    padding-top: 60px;
+    padding-top: 30px;
 }
 
 .progressbar { 
@@ -97,7 +93,6 @@ input {
 
 .about {
     color: white;
-    padding-top: 200px;
 }
 
 .about-text { 
@@ -113,11 +108,6 @@ input {
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
-}
-
-.first-page {
-    margin-left: 200px;
-    width: 400px;
 }
 
 .info-box { 
@@ -144,6 +134,7 @@ input {
     justify-items: center;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 150px;
 }
 
 .box-one {
@@ -189,6 +180,7 @@ input {
     border-radius: 20px;
     margin-top: 20px;
     margin-right: 30px;
+    margin-bottom: 20px;
 }
 
 .choice-text  {
