--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
-* {
-    margin: 0px;
-    padding: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Nova+Square&display=swap");
+
+:root {
+  background-color: rgb(29, 26, 26);
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #0E101C;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Nova Square", cursive;
 }
+
 
 nav {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    background-color: #221f65;
-    margin-bottom: 15px;
+    height: 10vh;
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background: linear-gradient(90deg, rgba(0,212,255,1) 14%, rgba(53,41,138,1) 39%);
 }
 
 ul {
