--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,8 +50,10 @@ main {
 }
 
 h1,h2 { 
+    margin: auto;
     color: white;
     text-align: center;
+    padding-top: 50px;
 }
 
 footer { 
@@ -122,7 +124,7 @@ input {
     height: 60vh;
     width: 20%;
     margin: 40px;
-    background-color: #221f65;
+    background-color: #35298a;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
