Fixed html code mybutton styling and home html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,12 +141,15 @@ input {
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 150px;
+    width: 100vw;
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+    margin-top: 250px;
 }
 
 .box-one {
@@ -165,19 +168,16 @@ input {
 }
 
 .myButton {
-	box-shadow: 0px 10px 14px -7px #276873;
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
+	box-shadow: 0px 10px 14px -7px;
+	background: #294d8a;
 	border-radius:28px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
 	font-size:20px;
 	font-weight:bold;
-	padding:13px 32px;
+	padding:10px 20px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
 }
 
 .myButton:hover {
