--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,13 +42,19 @@ a {
 }
 
 a:hover {
-    color: #2cd0e2;
+    color: greenyellow;
 }
 
 
 main { 
     height: 95vh;
 }
+
+h1 {
+    font-size: 2rem;
+    color: #fff;
+    margin-bottom: 2rem;
+  }
 
 h1,h2 { 
     margin: auto;
@@ -152,12 +158,25 @@ input {
     margin-top: 250px;
 }
 
+.container-topics {
+    width: 100vw;
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+    margin-top: 50px;
+  }
+
 .box-one {
     height: 35vh;
     width: 70%;
     margin-top: 40px;
     margin-right: 20px;
-    background-color: #221f65;
+    background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, rgba(53,41,138,1) 39%);
     border-radius: 50px;
 }
 
@@ -168,7 +187,7 @@ input {
 }
 
 .myButton {
-	box-shadow: 0px 10px 14px -7px;
+    box-shadow: 0px 10px 14px -7px;
 	background: #294d8a;
 	border-radius:28px;
 	display:inline-block;
