--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,13 +143,14 @@ input {
     margin-right: auto;
     text-align: center;
     border-radius: 50px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 .info-text {
     text-align: center;
     color: white;
     padding-top: 20px;
+    font-size: 20px;
 }
 
 .container {
@@ -206,25 +207,120 @@ input {
 }
 
 .myButton:hover {
-    color: #2cd0e2;
+    color: greenyellow;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem;
+  }
+  
+  .btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+  }
+
+/* Heads up Display */
+#hud {
+    display: column;
+    justify-content: space-between;
+  }
+  
+  .hud-prefix { 
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+  }
+  
+  .hud-main-text { 
+    text-align: center;
+  }
+  
+  #progressBar { 
+    width: 30rem;
+    height: 1.5rem;
+    border: 0.2rem solid rgb(11,223,36);
+    border-radius: 50px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  #progressBarFull { 
+    height: 100%;
+    background: rgb(11,223,36);
+    width: 0%;
+  }
+
+  #highscore-btn {
+  background: linear-gradient(
+    90deg,
+    rgb(255, 247, 9) 0%,
+    rgb(240, 221, 6) 100%
+  );
+}
+
+#highscore-btn:hover {
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(255, 255, 0, 0, 5);
 }
 
 .choice-container {
     display: inline-flex;
-    padding: 20px;
-    background-color: #2cd0e2;
-    height: 40px;
-    border-radius: 20px;
-    margin-top: 20px;
-    margin-right: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 0.8rem;
+    width: 100%;
+    border-radius: 50px;
+    background: #35298a;
+    font-size: 2rem;
+    text-align: center;
+    min-width: 80rem;
+    margin-top: 5px;
 }
 
+
+.choice-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0.04rem 1.4rem 0 greenyellow;
+    transform: scale(1.02);
+    transform: transform 100ms;
+    color: white;
+  }
+
+  .container-text {
+    margin: 0 auto;
+    padding: 0 auto;
+  }
+
+  .choice-prefix {
+    color: white;
+  }
+
 .choice-text  {
-    padding-top: 10px;
+    padding-top: 5px;
     cursor: pointer;
 }
 
 .choice-text:hover {
     color: greenyellow;
 }
+
+.correct {
+  background: linear-gradient(
+    32deg,
+    rgba(11, 223, 36) 0%,
+    rgb(41, 232, 111) 100%
+  );
+}
+
+.incorrect {
+    background: linear-gradient(
+      32deg,
+      rgba(230, 29, 1) 0%,
+      rgb(224, 11, 11, 1) 100%
+    );
+  }
+
+  @media screen and (max-width: 768px) {
+    .choice-container {
+      min-width: 40rem;
+    }
+  }
