Styled class of results on end page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,10 @@ input {
     color: greenyellow;
 }
 
+.results {
+  margin-top: 400px;
+}
+
 .correct {
   background: linear-gradient(
     32deg,
