--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,153 +5,150 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Nova Square", cursive;
+  margin: 0;
+  padding: 0;
+  font-family: "Nova Square", cursive;
 }
 
 nav {
-    display: flex;
-    width: 100%;
-    height: 8vh;
-    padding-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    background: linear-gradient(90deg, rgba(0,212,255,1) 14%, rgba(53,41,138,1) 39%);
-}
-
-li {
-    list-style-type: none;
-    margin-right: 100px;
-    margin-left: 100px;
-    font-size: 1.5rem;
-}
-
-a { 
-    text-decoration: none;
-    color: white;
-}
-
-a:hover {
-    color: greenyellow;
+  width: 100%;
+  padding: 2% 0;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 212, 255, 1) 14%,
+    rgba(53, 41, 138, 1) 39%
+  );
 }
 
 ul {
-    display: flex;
-    width: 4400px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
+li {
+  list-style-type: none;
+  margin-right: 100px;
+  margin-left: 100px;
+  font-size: 1.5rem;
+}
 
-main { 
-    height: 95vh;
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: greenyellow;
+}
+
+main {
+  height: 95vh;
 }
 
 h1 {
-    font-size: 2rem;
-    color: #fff;
-    margin-bottom: 2rem;
-  }
-
-h1,h2 { 
-    margin: auto;
-    color: white;
-    text-align: center;
-    padding-top: 60px;
+  font-size: 2rem;
+  color: #fff;
+  margin-bottom: 2rem;
 }
 
-footer { 
-    background: linear-gradient(90deg, rgba(0,212,255,1) 14%, rgba(53,41,138,1) 39%);
-    height: 6vh;
-    color: white;
-    text-align: center;
-    padding-top: 60px;
-    padding-bottom: 50px;
-    font-size: 1rem;
+h1,
+h2 {
+  margin: auto;
+  color: white;
+  padding-top: 60px;
+  text-align: center;
+}
+
+footer {
+  background: linear-gradient(
+    90deg,
+    rgba(0, 212, 255, 1) 14%,
+    rgba(53, 41, 138, 1) 39%
+  );
+  height: 6vh;
+  color: white;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 50px;
+  font-size: 1rem;
 }
 
 button {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 input {
-    padding: 10px;
-    border-radius: 20px;
-}
-
-.first-page {
-    margin-left: 200px;
-    width: 400px;
+  padding: 15px;
+  border-radius: 20px;
 }
 
 .user-name {
   margin-top: 100px;
 }
 
-.topics { 
-  padding-top: 130px;
-}
-
 .sports {
-    height: 50vh;
-    width: 50%;
-    background-color: #221f65;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
-    border-radius: 20px;
-    text-align: center;
+  height: 50vh;
+  width: 50%;
+  background-color: #221f65;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  border-radius: 20px;
+  text-align: center;
 }
 
-.sports-text { 
-    color: white;
-    padding-top: 30px;
+.sports-text {
+  color: white;
+  padding-top: 30px;
 }
 
-.progressbar { 
-    width: 20rem;
-    height: 1.5rem;
-    border: 0.2em solid #2cd0e2;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 50px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.progressbar {
+  width: 20rem;
+  height: 1.5rem;
+  border: 0.2em solid #2cd0e2;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .about {
-    color: white;
-    padding-top: 200px;
+  color: white;
+  padding-top: 200px;
 }
 
-.about-text { 
-    margin-top: 20px;
-    padding-top: 60px;
-    padding-right: 30px;
-    padding-left: 30px;
-    text-align: center;
-    display: block;
-    height: 20vh;
-    width: 50%;
-    background-color: #21D4FD;
-    background-image: linear-gradient(
-19deg
-, #21D4FD 0%, rgba(53,41,138,1) 39%);
-    border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
+.about-text {
+  margin-top: 20px;
+  padding-top: 60px;
+  padding-right: 30px;
+  padding-left: 30px;
+  text-align: center;
+  display: block;
+  height: 20vh;
+  width: 50%;
+  background-color: #21d4fd;
+  background-image: linear-gradient(
+    19deg,
+    #21d4fd 0%,
+    rgba(53, 41, 138, 1) 39%
+  );
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
-.info-box { 
-    height: 60vh;
-    width: 20%;
-    margin: 40px;
-    background-color: #35298a;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    border-radius: 50px;
-    padding-top: 50px;
+.info-box {
+  height: 60vh;
+  width: 20%;
+  margin: 40px;
+  background-color: #35298a;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-radius: 50px;
+  padding-top: 50px;
 }
 
 .info-text {
@@ -162,106 +159,110 @@ input {
 }
 
 .container {
-    width: 100vw;
-    height: 45vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 2rem;
-    margin-top: 250px;
+  width: 100vw;
+  height: 45vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 2rem;
+  margin-top: 250px;
 }
 
 .container-topics {
-    width: 100vw;
-    height: 45vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 2rem;
-    margin-top: 50px;
-  }
+  width: 100vw;
+  height: 45vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 2rem;
+  margin-top: 50px;
+}
 
 .box-one {
-    height: 35vh;
-    width: 70%;
-    margin-top: 40px;
-    margin-right: 20px;
-    background-color: #21D4FD;
-    background-image: linear-gradient(19deg, #21D4FD 0%, rgba(53,41,138,1) 39%);
-    border-radius: 50px;
+  height: 35vh;
+  width: 70%;
+  margin-top: 40px;
+  margin-right: 20px;
+  background-color: #21d4fd;
+  background-image: linear-gradient(
+    19deg,
+    #21d4fd 0%,
+    rgba(53, 41, 138, 1) 39%
+  );
+  border-radius: 50px;
 }
 
 .box-text {
-    text-align: center;
-    color: white;
-    padding-top: 50px;
+  text-align: center;
+  color: white;
+  padding-top: 50px;
 }
 
 .myButton {
-    box-shadow: 0px 10px 14px -7px;
-	background: #294d8a;
-	border-radius:28px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:20px;
-	font-weight:bold;
-	padding:10px 20px;
-	text-decoration:none;
+  box-shadow: 0px 10px 14px -7px;
+  background: #294d8a;
+  border-radius: 28px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
 }
 
 .myButton:hover {
-    color: greenyellow;
+  color: greenyellow;
 }
 
 .btn:hover {
-    cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem;
-  }
-  
-  .btn[disabled]:hover {
-    cursor: not-allowed;
-    box-shadow: none;
-    transform: none;
-  }
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem;
+}
+
+.btn[disabled]:hover {
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
+}
 
 /* Heads up Display */
 #hud {
-    display: column;
-    justify-content: space-between;
-  }
-  
-  .hud-prefix { 
-    text-align: center;
-    font-size: 2rem;
-    color: white;
-    margin-top: 20px;
-  }
-  
-  .hud-main-text { 
-    text-align: center;
-  }
-  
-  #progressBar { 
-    width: 30rem;
-    height: 1.5rem;
-    border: 0.2rem solid rgb(11,223,36);
-    border-radius: 50px;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-  
-  #progressBarFull { 
-    height: 100%;
-    background: rgb(11,223,36);
-    width: 0%;
-  }
+  display: column;
+  justify-content: space-between;
+}
 
-  #highscore-btn {
+.hud-prefix {
+  text-align: center;
+  font-size: 2rem;
+  color: white;
+  margin-top: 20px;
+}
+
+.hud-main-text {
+  text-align: center;
+}
+
+#progressBar {
+  width: 30rem;
+  height: 1.5rem;
+  border: 0.2rem solid rgb(11, 223, 36);
+  border-radius: 50px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+#progressBarFull {
+  height: 100%;
+  background: rgb(11, 223, 36);
+  width: 0%;
+}
+
+#highscore-btn {
   background: linear-gradient(
     90deg,
     rgb(255, 247, 9) 0%,
@@ -274,44 +275,47 @@ input {
 }
 
 .choice-container {
-    display: inline-flex;
-    margin-bottom: 0.8rem;
-    width: 100%;
-    border-radius: 50px;
-    background: #35298a;
-    font-size: 2rem;
-    text-align: center;
-    min-width: 80rem;
-    margin-top: 5px;
-    background-color: #21D4FD;
-    background-image: linear-gradient(19deg, #21D4FD 0%, rgba(53,41,138,1) 39%);
+  display: inline-flex;
+  margin-bottom: 0.8rem;
+  width: 100%;
+  border-radius: 50px;
+  background: #35298a;
+  font-size: 2rem;
+  text-align: center;
+  min-width: 80rem;
+  margin-top: 5px;
+  background-color: #21d4fd;
+  background-image: linear-gradient(
+    19deg,
+    #21d4fd 0%,
+    rgba(53, 41, 138, 1) 39%
+  );
 }
 
-
 .choice-container:hover {
-    cursor: pointer;
-    box-shadow: 0 0.04rem 1.4rem 0 greenyellow;
-    transform: scale(1.02);
-    transform: transform 100ms;
-    color: white;
-  }
+  cursor: pointer;
+  box-shadow: 0 0.04rem 1.4rem 0 greenyellow;
+  transform: scale(1.02);
+  transform: transform 100ms;
+  color: white;
+}
 
-  .container-text {
-    margin: 0 auto;
-    padding: 0 auto;
-  }
+.container-text {
+  margin: 0 auto;
+  padding: 0 auto;
+}
 
-  .choice-prefix {
-    color: white;
-  }
+.choice-prefix {
+  color: white;
+}
 
-.choice-text  {
-    padding-top: 5px;
-    cursor: pointer;
+.choice-text {
+  padding-top: 5px;
+  cursor: pointer;
 }
 
 .choice-text:hover {
-    color: greenyellow;
+  color: greenyellow;
 }
 
 .results {
@@ -327,15 +331,99 @@ input {
 }
 
 .incorrect {
+  background: linear-gradient(
+    32deg,
+    rgba(230, 29, 1) 0%,
+    rgb(224, 11, 11, 1) 100%
+  );
+}
+
+@media screen and (max-width: 390px) {
+  nav {
+    width: 100%;
     background: linear-gradient(
-      32deg,
-      rgba(230, 29, 1) 0%,
-      rgb(224, 11, 11, 1) 100%
+      90deg,
+      rgba(0, 212, 255, 1) 14%,
+      rgba(53, 41, 138, 1) 39%
     );
   }
 
-  @media screen and (max-width: 768px) {
-    .choice-container {
-      min-width: 40rem;
-    }
+  ul {
+    display: block;
+    text-align: center;
   }
+
+  li {
+    list-style-type: none;
+    margin-right: 100px;
+    margin-left: 100px;
+    font-size: 1.5rem;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+
+  .info-box {
+      height: 60vh;
+      width: 60%;
+      margin: 40px;
+      background-color: #35298a;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      border-radius: 50px;
+      padding-top: 50px;
+  }
+
+  .container-topics > h1,h2 {
+    text-align: center;
+  }
+  
+  .container-topics {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    max-width: fit-content;
+    margin-top: auto;
+    flex-wrap: wrap;
+  }
+
+  .about {
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 130px;
+}
+
+.about-text {
+  margin-top: 20px;
+  padding-top: 60px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  text-align: center;
+  display: block;
+  height: 20vh;
+  width: 50%;
+  background-color: #21d4fd;
+  background-image: linear-gradient( 
+19deg
+, #21d4fd 0%, rgba(53, 41, 138, 1) 39% );
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+  main { 
+    height: fit-content;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .choice-container {
+    min-width: 40rem;
+  }
+}
