--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ li {
   list-style-type: none;
   margin-right: 100px;
   margin-left: 100px;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 a {
@@ -50,6 +50,10 @@ h1 {
   font-size: 2rem;
   color: #fff;
   margin-bottom: 2rem;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 h1,
@@ -231,10 +235,6 @@ input {
 }
 
 /* Heads up Display */
-#hud {
-  display: column;
-  justify-content: space-between;
-}
 
 .hud-prefix {
   text-align: center;
@@ -359,27 +359,28 @@ input {
     margin-left: 100px;
     font-size: 1.5rem;
   }
-  
+
   h1 {
     text-align: center;
   }
 
   .info-box {
-      height: 60vh;
-      width: 60%;
-      margin: 40px;
-      background-color: #35298a;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
-      border-radius: 50px;
-      padding-top: 50px;
+    height: 60vh;
+    width: 60%;
+    margin: 40px;
+    background-color: #35298a;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border-radius: 50px;
+    padding-top: 50px;
   }
 
-  .container-topics > h1,h2 {
+  .container-topics > h1,
+  h2 {
     text-align: center;
   }
-  
+
   .container-topics {
     width: 100%;
     height: fit-content;
@@ -396,34 +397,149 @@ input {
     color: white;
     padding-top: 50px;
     padding-bottom: 130px;
-}
+  }
 
-.about-text {
-  margin-top: 20px;
-  padding-top: 60px;
-  padding-right: 30px;
-  padding-bottom: 30px;
-  padding-left: 30px;
-  text-align: center;
-  display: block;
-  height: 20vh;
-  width: 50%;
-  background-color: #21d4fd;
-  background-image: linear-gradient( 
-19deg
-, #21d4fd 0%, rgba(53, 41, 138, 1) 39% );
-  border-radius: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .about-text {
+    margin-top: 20px;
+    padding-top: 60px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    text-align: center;
+    display: block;
+    height: 20vh;
+    width: 50%;
+    background-color: #21d4fd;
+    background-image: linear-gradient(
+      19deg,
+      #21d4fd 0%,
+      rgba(53, 41, 138, 1) 39%
+    );
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-  main { 
+  main {
     height: fit-content;
   }
 }
 
 @media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 540px) {
+  nav {
+    width: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(0, 212, 255, 1) 14%,
+      rgba(53, 41, 138, 1) 39%
+    );
+  }
+
+  ul {
+    display: block;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 1.7rem;
+  }
+
+  main {
+    height: fit-content;
+  }
+
+  .info-box {
+    height: 60vh;
+    width: 60%;
+    margin: 40px;
+    background-color: #35298a;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border-radius: 50px;
+    padding-top: 20px;
+  }
+
+  .container {
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: fit-content;
+    margin: auto auto;
+    padding: 2rem;
+    width: fit-content;
+  }
+
+  .container-topics > h1,
+  h2 {
+    text-align: center;
+  }
+
+  .container-topics {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    max-width: fit-content;
+    margin-top: auto;
+    flex-wrap: wrap;
+  }
+
   .choice-container {
-    min-width: 40rem;
+    display: inline-flex;
+    margin-bottom: 0.8rem;
+    width: 100%;
+    border-radius: 50px;
+    background: #35298a;
+    font-size: 2rem;
+    text-align: center;
+    min-width: fit-content;
+    margin-top: 5px;
+    background-color: #21d4fd;
+    background-image: linear-gradient(
+      19deg,
+      #21d4fd 0%,
+      rgba(53, 41, 138, 1) 39%
+    );
+  }
+
+  #progressBar {
+    width: 20rem;
+    height: 1.5rem;
+    border: 0.2rem solid rgb(11, 223, 36);
+    border-radius: 50px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .about {
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 70px;
+  }
+
+  .about-text {
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    text-align: center;
+    display: block;
+    height: 20vh;
+    width: 50%;
+    background-color: #21d4fd;
+    background-image: linear-gradient(
+      19deg,
+      #21d4fd 0%,
+      rgba(53, 41, 138, 1) 39%
+    );
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
