--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,3 +543,76 @@ input {
     margin-right: auto;
   }
 }
+
+@media screen and (max-width: 820px){
+  nav {
+    width: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(0, 212, 255, 1) 14%,
+      rgba(53, 41, 138, 1) 39%
+    );
+  }
+
+  ul {
+    display: block;
+    text-align: center;
+  }
+
+  main {
+    height: fit-content;
+  }
+
+  .info-box {
+    height: 60vh;
+    width: 40%;
+    margin: 40px;
+    background-color: #35298a;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border-radius: 50px;
+    padding-top: 50px;
+}
+
+.container-topics {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  max-width: fit-content;
+  margin-top: auto;
+  flex-wrap: wrap;
+}
+
+.container {
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: fit-content;
+  margin: auto auto;
+  padding: 2rem;
+  width: fit-content;
+}
+
+.choice-container {
+  display: inline-flex;
+  margin-bottom: 0.8rem;
+  width: 100%;
+  border-radius: 50px;
+  background: #35298a;
+  font-size: 2rem;
+  text-align: center;
+  min-width: fit-content;
+  margin-top: 5px;
+  background-color: #21d4fd;
+  background-image: linear-gradient(
+    19deg,
+    #21d4fd 0%,
+    rgba(53, 41, 138, 1) 39%
+  );
+}
+}
